[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/ConfirmDialog.gd" id="1_confirm"]

[node name="ConfirmDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_confirm")
visible = false
process_mode = 4

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_right = 250.0
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Başlık"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Mesaj"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "İptal"

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Onayla"

